# rag_v1

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  app.py  app_rewriter.py  config.txt  download_data.py  pyproject.toml
.github/workflows/: ci.yml
corpus/: citations.csv  citations_parser.py  data_sources.csv  inspect_db.py  metadata.csv
docs/: ADR.md  TODO.md  architecture.md  phase_2.md  refactor.md
docs/garth/: TODO.md  phase_2.md
src/: config.py  utils.py
src/embedding/: model.py
src/evaluation/: dataset.py  evaluate.py
src/generation/: llm.py  rewriter.py
src/ingestion/: downloader.py  loaders.py  pdf_section_splitter.py  processor.py
src/retrieval/: query.py  query_logger.py
tests/: test_config.py  test_download_data.py  test_downloader.py  test_embedding.py  test_evaluation.py  test_generation.py  test_html_loader_encoding.py  test_pdf_section_splitter.py  test_query_logger.py  test_retrieval.py  test_rewriter.py  test_utils.py
