[project]
name = "rag-stress-testing"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "ruff>=0.15.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
